--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "cypress": "3.6.1"
   },
   "scripts": {
-    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
